cleaned up sound object tests

--- a/sound-object-playback.ipynb
+++ b/sound-object-playback.ipynb
@@ -14,13 +14,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "### Loading Gesture Classifier.           ###\n",
+      "### Classifier file successfully loaded.  ###\n"
+     ]
+    }
+   ],
    "source": [
     "#%matplotlib inline\n",
     "from __future__ import print_function\n",
@@ -34,7 +43,7 @@
     "from mpl_toolkits.mplot3d import Axes3D \n",
     "import seaborn as sns\n",
     "import random\n",
-    "#from touch_performance_player import TouchPerformancePlayer\n",
+    "from touch_performance_player import TouchPerformancePlayer\n",
     "import OSC\n",
     "import sys\n",
     "sys.path.append(\"./MetatoneClassifier/classifier/\")\n",
@@ -145,116 +154,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 103,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "\"\"\"Class for playing back sound objects on metatone apps.\"\"\"\n",
-    "import OSC\n",
-    "import random\n",
-    "import pandas as pd\n",
-    "from threading import Timer\n",
-    "\n",
-    "PLAYBACK_TOUCH_PATTERN = \"/metatone/playback/touch\"\n",
-    "PLAYBACK_GESTURE_PATTERN = \"/metatone/playback/gesture\"\n",
-    "\n",
-    "class TouchPerformancePlayer:\n",
-    "    \"\"\"Sends sound objects to an iPad for concatenative performance.\"\"\"\n",
-    "\n",
-    "    def __init__(self, name, address, port):\n",
-    "        self.client = OSC.OSCClient()\n",
-    "        self.performers = {}\n",
-    "        self.name = name\n",
-    "        self.address = (address,port)\n",
-    "        self.addPerformer(name,address,port)\n",
-    "        self.current_gesture = 0\n",
-    "        self.sound_objects = pd.DataFrame()\n",
-    "        self.timers = []\n",
-    "        self.empty_object = pd.DataFrame(columns = [\"x\",\"y\",\"velocity\",\"time\"])\n",
-    "        self.available_gestures = [0]\n",
-    "        self.playing = False;\n",
-    "        print(\"Initialising a performance player for\", name, \"at\", address + \":\" + str(port))\n",
-    "        \n",
-    "    def setPerformances(self,sound_objects):\n",
-    "        \"\"\"Set a dataframe of soundobjects for performances. DataFrame should have two column: objects and gestures\"\"\"\n",
-    "        self.sound_objects = sound_objects\n",
-    "        print(\"Setting up new sound_object dataframe:\")\n",
-    "        print(self.sound_objects.gestures.value_counts())\n",
-    "        self.available_gestures = self.sound_objects.gestures.unique().tolist()\n",
-    "        self.available_gestures.append(0)\n",
-    "        print(\"Available Gestures:\", self.available_gestures)\n",
-    "\n",
-    "    def addPerformer(self, name, address, port):\n",
-    "        \"\"\"Adds a performer's address and port to the list\"\"\"\n",
-    "        self.performers[name] = (address, port)\n",
-    "        \n",
-    "    def startPlaying(self):\n",
-    "        \"\"\"Start sending sound objects to the performer.\"\"\"\n",
-    "        if not self.playing:\n",
-    "            print(\"Starting Playback with gesture:\", self.current_gesture)\n",
-    "            self.continuePlaying();\n",
-    "            \n",
-    "    def stopPlaying(self):\n",
-    "        \"\"\"Stop sending sound objects to the performer and stop all timers.\"\"\"\n",
-    "        if self.playing:\n",
-    "            print(\"Stopping playback and cancelling timers for:\", self.name)\n",
-    "            self.cancelTimers()\n",
-    "            self.playing = False;\n",
-    "            self.current_gesture = 0;\n",
-    "        \n",
-    "    def continuePlaying(self):\n",
-    "        \"\"\"Continue playing the gesture previously set.\"\"\"\n",
-    "        print(\"Playing perf-object with gesture:\", self.current_gesture, \"on:\", self.name)\n",
-    "        self.scheduleSoundObject(self.current_gesture)\n",
-    "        \n",
-    "    def updateGesture(self,new_gesture):\n",
-    "        \"\"\"Update the gesture and start playing if it's different from before.\"\"\"\n",
-    "        if self.current_gesture != new_gesture:\n",
-    "            # start playing new gesture immediately.\n",
-    "            self.current_gesture = new_gesture\n",
-    "            self.scheduleSoundObject(self.current_gesture)\n",
-    "    \n",
-    "    def cancelTimers(self):\n",
-    "        \"\"\"Stop all current timers to send new performance objects.\"\"\"\n",
-    "        for t in self.timers:\n",
-    "            t.cancel()\n",
-    "        self.timers = []\n",
-    "    \n",
-    "    def sendTouch(self, performer, x, y, velocity):\n",
-    "        \"\"\"Sends an OSC message to trigger a touch sound.\"\"\"\n",
-    "        address = self.performers[performer]\n",
-    "        self.client.sendto(OSC.OSCMessage(PLAYBACK_TOUCH_PATTERN, [performer,x, y, velocity]), address)\n",
-    "        \n",
-    "    def scheduleSoundObject(self,gesture):\n",
-    "        \"\"\"Schedule a random sound object from a given gesture.\"\"\"\n",
-    "        if gesture not in self.available_gestures:\n",
-    "            print(\"Sound object for gesture\",gesture,\"is not available.\")\n",
-    "            return\n",
-    "        if gesture == 0:\n",
-    "            perf = self.empty_object\n",
-    "        else:\n",
-    "            perf = self.sound_objects[self.sound_objects.gestures == gesture].objects.sample(1)[0]\n",
-    "        self.schedulePerformance(perf,self.name)\n",
-    "        t = Timer(5.0,self.continuePlaying)\n",
-    "        self.timers.append(t)\n",
-    "        t.start()\n",
-    "\n",
-    "    def schedulePerformance(self, perf, performer = \"local\"):\n",
-    "        \"\"\"Schedule performance of a tiny performance dataframe.\"\"\"\n",
-    "        self.cancelTimers()\n",
-    "        self.playing = True;\n",
-    "        if (perf.empty): # Returns if the perf is empty.\n",
-    "            return\n",
-    "        for row in perf.iterrows():\n",
-    "            self.timers.append(Timer(row[1]['time'],self.sendTouch,args=[performer,row[1]['x'],row[1]['y'],row[1]['velocity']]))\n",
-    "        for t in self.timers:    \n",
-    "            t.start()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -263,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -296,12 +195,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Test out the sound_object playback"
+    "## Test out the sound_object playback\n",
+    "\n",
+    "### Setup and start playing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -310,7 +211,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Initialising a performance player for charles at 192.168.0.36:51200\n",
+      "('Initialising a performance player for', 'charles', 'at', '192.168.0.36:51200')\n",
       "Setting up new sound_object dataframe:\n",
       "2    591\n",
       "4    385\n",
@@ -321,10 +222,11 @@
       "6     29\n",
       "5     21\n",
       "Name: gestures, dtype: int64\n",
-      "Available Gestures: [8, 7, 4, 3, 1, 2, 5, 6, 0]\n",
-      "Starting Playback with gesture: 0\n",
-      "Playing perf-object with gesture: 0 on: charles\n",
-      "Playing perf-object with gesture: 0 on: charles\n"
+      "('Available Gestures:', [8, 7, 4, 3, 1, 2, 5, 6, 0])\n",
+      "('Starting Playback with gesture:', 0)\n",
+      "('Playing perf-object with gesture:', 0, 'on:', 'charles')\n",
+      "('Playing perf-object with gesture:', 0, 'on:', 'charles')\n",
+      "('Playing perf-object with gesture:', 0, 'on:', 'charles')\n"
      ]
     }
    ],
@@ -338,8 +240,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Update Gesture to send"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -348,13 +257,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Stopping playback and cancelling timers for: charles\n"
+      "('Playing perf-object with gesture:', 4, 'on:', 'charles')\n"
      ]
     }
    ],
    "source": [
-    "player.updateGesture(12)\n",
-    "player.stopPlaying()"
+    "player.updateGesture(4)"
    ]
   },
   {
@@ -363,39 +271,31 @@
     "deletable": true,
     "editable": true
    },
-   "source": []
+   "source": [
+    "### Stop playing"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true,
     "scrolled": true
    },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Stopping playback and cancelling timers for:', 'charles')\n"
+     ]
+    }
+   ],
+   "source": [
+    "player.stopPlaying()"
+   ]
   }
  ],
  "metadata": {
