Added sound object playback Jupyter notebook

--- a/sound-object-playback.ipynb
+++ b/sound-object-playback.ipynb
@@ -266,6 +266,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<enumerate object at 0x11338a190>\n"
+     ]
+    }
+   ],
+   "source": [
+    "p = {'a':1}\n",
+    "\n",
+    "x = ['a','b','c','d']\n",
+    "enumerate(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "deletable": true,
