updated picked sound object file

--- a/sound-object-playback.ipynb
+++ b/sound-object-playback.ipynb
@@ -155,7 +155,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Loading gesture to sound-object data"
    ]
@@ -164,14 +167,23 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "### Classified sound objects successfully loaded.  ###\n"
+      "### Error loading sound objects, classifying again.\n",
+      "Classified 521 sound objects.\n",
+      "Classified 523 sound objects.\n",
+      "Classified 515 sound objects.\n",
+      "Classified 468 sound objects.\n",
+      "Converting touch logs to sound_object format\n",
+      "Total sound objects classified is: 2027\n",
+      "### Classified sound objects successfully generated and saved.  ###\n"
      ]
     }
    ],
@@ -193,7 +205,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Test out the sound_object playback\n",
     "\n",
@@ -204,7 +219,9 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -241,7 +258,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Update Gesture to send"
    ]
@@ -250,7 +270,9 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -269,7 +291,9 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -291,7 +315,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
