--- a/performance-to-tiny-performance-dataframes.ipynb
+++ b/performance-to-tiny-performance-dataframes.ipynb
@@ -7,9 +7,42 @@
     "editable": true
    },
    "source": [
-    "# Performance to Sound Object Processing\n",
+    "# Performance to Tiny Performance Format\n",
     "\n",
-    "The purpose of this script is to break down all the metatone touch-data into individual sound object CSVs. Each performance is split per player, and into 5-second windows at 1-second intervals. The output CSVs have a `time` column with the number of seconds since the start of the file and also have a `moving` column which is 0 if velocity is 0 and is otherwise 1."
+    "The purpose of this script is to break down all the metatone touch-data into a long Tiny Touchscreen Performance array. Each performance is split per player, cleaned into `[x,y,moving,time,dt]` columns and then concatenated to produce a very long array. This is stored in `h5` format for later use in training ANNs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "from __future__ import print_function\n",
+    "import os\n",
+    "import time\n",
+    "from datetime import timedelta\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import random\n",
+    "import h5py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "### Load up data\n",
+    "\n",
+    "- Loads metatone logs.\n",
+    "- Checks if output directory exists, otherwise creates it."
    ]
   },
   {
@@ -20,69 +53,24 @@
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
-   "source": [
-    "#%matplotlib inline\n",
-    "from __future__ import print_function\n",
-    "import os\n",
-    "import time\n",
-    "from datetime import timedelta\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib\n",
-    "import matplotlib.pyplot as plt\n",
-    "from mpl_toolkits.mplot3d import Axes3D \n",
-    "import seaborn as sns\n",
-    "import random"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Load up data\n",
-    "\n",
-    "- Loads metatone logs.\n",
-    "- Checks if output directory exists, otherwise creates it."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating Individual Perf Directory\n",
       "Loading all the frames.\n",
-      "Done Loading: 163 logs.\n"
+      "Done Loading 163 logs.\n"
      ]
     }
    ],
    "source": [
     "log_files = []\n",
-    "performances = []\n",
-    "\n",
-    "output_directory = \"individual-tiny-perf-format/\"\n",
-    "output_fileending = \"-indtinyperf.csv\"\n",
-    "\n",
-    "if not os.path.exists(output_directory):\n",
-    "    print(\"Creating Individual Perf Directory\")\n",
-    "    os.makedirs(output_directory)\n",
+    "log_frames = []\n",
     "\n",
     "for local_file in os.listdir(\"data\"):\n",
     "    if local_file.endswith(\"-touches.csv\"):\n",
     "        log_files.append(\"data/\" + local_file)\n",
-    "# for log in log_files:\n",
-    "    # do some stuff\n",
-    "    \n",
-    "log_frames = []\n",
+    "\n",
     "print(\"Loading all the frames.\")\n",
     "for log in log_files:\n",
     "    log_frames.append(pd.DataFrame.from_csv(log,parse_dates=True,header=0))\n",
@@ -91,7 +79,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Process touch logs\n",
     "\n",
@@ -99,7 +90,8 @@
     "- Convert each log to tiny performance format (time as float, x, y, moving)\n",
     "- Save each log individually (currently commented)\n",
     "- Concatenate all logs into one\n",
-    "- Save as a big log file (177MB - 4.3M touches)\n",
+    "- Save as one big file in float32 format.\n",
+    "- In h5 format the 4.3M touches end up around 52MB.\n",
     "\n",
     "### Problems\n",
     "\n",
@@ -111,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -145,16 +137,16 @@
     "    output.x_pos = output.x_pos/1024.0\n",
     "    output.y_pos = output.y_pos/768.0\n",
     "    output.time = (output.time - first_time).apply(timedelta.total_seconds)\n",
-    "    # output.time = output.time.diff() # adding \n",
+    "    output['dt'] = output.time.diff() # time diff.\n",
     "    output.time = output.time.fillna(0)\n",
-    "    output = output.rename(columns={'x_pos': 'x', 'y_pos': 'y', 'velocity': 'moving', 'time': 'time'})\n",
+    "    output.dt = output.dt.fillna(0)\n",
+    "    output = output.rename(columns={'x_pos': 'x', 'y_pos': 'y', 'velocity': 'moving', 'time': 'time', 'dt': 'dt'})\n",
     "    return output\n",
-    "\n",
     "\n",
     "total_touches = 0\n",
     "total_performances = 0\n",
     "total_performers = 0\n",
-    "all_individual_tiny_perfs = []\n",
+    "individual_tiny_perfs = []\n",
     "\n",
     "print(\"Dividing all performances by player and converting to tiny performance format.\")\n",
     "\n",
@@ -169,71 +161,35 @@
     "        l = l.set_index('time')\n",
     "        total_touches += l.x.count() # Add to total touches processed\n",
     "        #l.to_csv(output_directory + individual_log_title + output_fileending)\n",
-    "        all_individual_tiny_perfs.append(l)\n",
+    "        individual_tiny_perfs.append(l)\n",
     "                \n",
     "print()\n",
     "print(\"Processed\", total_performances, \"performances.\")\n",
     "print(\"There were\", total_performers, \"performers in total.\")\n",
     "print(\"Total touches recorded was:\", total_touches)\n",
-    "\n",
     "print(\"Now saving a big file with all performances concatenated.\")\n",
-    "all_individual_tiny_perfs = pd.concat(all_individual_tiny_perfs)\n",
-    "all_individual_tiny_perfs.to_csv(\"metatone_corpus_tiny_perf_format.csv\")\n",
-    "print(\"Done.\")\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "### Unused Functions and Ideas"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "def five_second_frame(row, frame):\n",
-    "    \"\"\"\n",
-    "    Returns a dataframe of five seconds length before \"time\".\n",
-    "    \"\"\"\n",
-    "    end_time = row.name\n",
-    "    frame = frame.between_time((end_time + timedelta(seconds=-5)).time(), end_time.time())\n",
-    "    if frame.empty:\n",
-    "        return np.nan\n",
-    "    return frame\n",
+    "total_perf_df = pd.concat(individual_tiny_perfs)\n",
+    "# total_perf_df.to_csv(\"metatone_corpus_tiny_perf_format.csv\" # not saving to CSV anymore.\n",
     "\n",
-    "def split_and_classify_metatone_log(log_frame):\n",
-    "    return [],[]\n",
+    "# clip to x,y in [0,1]\n",
+    "total_perf_df.set_value(total_perf_df[total_perf_df.x > 1].index, 'x', 1.0)\n",
+    "total_perf_df.set_value(total_perf_df[total_perf_df.x < 0].index, 'x', 0.0)\n",
+    "total_perf_df.set_value(total_perf_df[total_perf_df.y > 1].index, 'y', 1.0)\n",
+    "total_perf_df.set_value(total_perf_df[total_perf_df.y < 0].index, 'y', 0.0)\n",
     "\n",
-    "#log_frame = pd.DataFrame.from_csv(a,parse_dates=True,header=0)\n",
-    "#log_frame[\"moving\"] = log_frame.velocity/log_frame.velocity\n",
-    "#log_frame.moving = log_frame.moving.fillna(0)\n",
-    "#times = pd.DataFrame(log_frame.index,index=log_frame.index).resample('1s', how='count')\n",
-    "#sound_object_frames = pd.DataFrame(log_frame.index,index=log_frame.index)\n",
-    "#times[\"sound_object_frames\"] = times.apply(five_second_frame, axis=1, frame=log_frame)\n",
+    "# could clip dt as well.\n",
+    "total_perf_df.set_value(total_perf_df[total_perf_df.dt > 5.0].index, 'dt', 5.0)\n",
     "\n",
-    "#for performer in log_frame.device_id.unique():\n",
-    "#    sound_object_frames[performer] = times.apply(five_second_frame, axis=1, frame=log_frame, name=performer)\n",
+    "# make into one huge array\n",
+    "total_perf_array = np.array(total_perf_df[['x','y','dt']])\n",
     "\n",
-    "#out = times.apply(five_second_frame, axis=1, frame=log_frame, name='charles')\n",
+    "# save huge array in h5 format\n",
+    "data_file_name = \"MetatoneTinyPerformanceRecords.h5\"\n",
+    "with h5py.File(data_file_name, 'w') as data_file:\n",
+    "    dset = data_file.create_dataset('total_performances', data=total_perf_array, dtype='float32')\n",
     "\n",
-    "# 1. Split via performer\n",
-    "# 2. Split into rolling five second segments (should be a list)\n",
-    "# 3. Produce a feature vector and classify gesture for each segment (record separately)\n",
-    "# 4. Calculate time and moving columns\n",
-    "# 5. Save each non-empty segment into a CSV file."
+    "# done.\n",
+    "print(\"Done.\")"
    ]
   }
  ],
