more descriptive name for sound object conversion script

--- a/sound-object-conversion-playback.ipynb
+++ b/sound-object-conversion-playback.ipynb
@@ -9,7 +9,9 @@
    "source": [
     "# Sound Object Playback\n",
     "\n",
-    "The purpose of this script is to break out some 5-second sound objects from the Metatone touch archive and play them back on a device."
+    "The purpose of this script is to break out some 5-second sound objects from the Metatone touch archive and play them back on a device.\n",
+    "\n",
+    "The script saves the sound-object corpus in Pickle format."
    ]
   },
   {
@@ -286,41 +288,6 @@
    "source": [
     "player.updateGesture(4)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<enumerate object at 0x11338a190>\n"
-     ]
-    }
-   ],
-   "source": [
-    "p = {'a':1}\n",
-    "\n",
-    "x = ['a','b','c','d']\n",
-    "enumerate(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
