--- a/generate_metatone_tinyperf_corpus_differential.ipynb
+++ b/generate_metatone_tinyperf_corpus_differential.ipynb
@@ -2,10 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "# Performance to Tiny Performance Format - Differential\n",
     "\n",
@@ -15,11 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from __future__ import print_function\n",
@@ -34,10 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "### Load up data\n",
     "\n",
@@ -48,11 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -67,9 +53,9 @@
     "log_files = []\n",
     "log_frames = []\n",
     "\n",
-    "for local_file in os.listdir(\"data\"):\n",
+    "for local_file in os.listdir(\"../data\"):\n",
     "    if local_file.endswith(\"-touches.csv\"):\n",
-    "        log_files.append(\"data/\" + local_file)\n",
+    "        log_files.append(\"../data/\" + local_file)\n",
     "\n",
     "print(\"Loading all the frames.\")\n",
     "for log in log_files:\n",
@@ -79,10 +65,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "# Process touch logs\n",
     "\n",
@@ -105,9 +88,6 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
     "scrolled": true
    },
    "outputs": [
@@ -201,21 +181,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
