--- a/tiny-perf-processing/generate_metatone_tinyperf_corpus_differential_1000.ipynb
+++ b/tiny-perf-processing/generate_metatone_tinyperf_corpus_differential_1000.ipynb
@@ -4,14 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Performance to Tiny Performance Format\n",
+    "# Performance to Tiny Performance Format - Differential\n",
     "\n",
-    "The purpose of this script is to break down all the metatone touch-data into a long Tiny Touchscreen Performance array. Each performance is split per player, cleaned into `[x,y,moving,time,dt]` columns and then concatenated to produce a very long array. This is stored in `h5` format for later use in training ANNs."
+    "The purpose of this script is to break down all the metatone touch-data into a long Tiny Touchscreen Performance array. Each performance is split per player, cleaned into `[dx,dy,moving,time,dt]` columns and then concatenated to produce a very long array. This is stored in `h5` format for later use in training ANNs.\n",
+    "\n",
+    "This script uses x, y values in [0,1000] and t values in ms.\n",
+    "\n",
+    "Verdict - doesn't really help!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -53,124 +57,14 @@
     "log_files = []\n",
     "log_frames = []\n",
     "\n",
-    "for local_file in os.listdir(\"data\"):\n",
+    "for local_file in os.listdir(\"../data\"):\n",
     "    if local_file.endswith(\"-touches.csv\"):\n",
-    "        log_files.append(\"data/\" + local_file)\n",
+    "        log_files.append(\"../data/\" + local_file)\n",
     "\n",
     "print(\"Loading all the frames.\")\n",
     "for log in log_files:\n",
     "    log_frames.append(pd.DataFrame.from_csv(log,parse_dates=True,header=0))\n",
     "print(\"Done Loading\", len(log_frames), \"logs.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total length of corpus:\n",
-      "20.7342317189 hours\n",
-      "Median performance length\n",
-      "7.10905663333 minutes\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>length</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>163.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>7.632233</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>5.060826</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>0.000035</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>4.399071</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>7.109057</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>9.419563</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>26.003427</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           length\n",
-       "count  163.000000\n",
-       "mean     7.632233\n",
-       "std      5.060826\n",
-       "min      0.000035\n",
-       "25%      4.399071\n",
-       "50%      7.109057\n",
-       "75%      9.419563\n",
-       "max     26.003427"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lengths = []\n",
-    "\n",
-    "# Calculate performance lengths.\n",
-    "for l in log_frames:\n",
-    "    lengths.append(timedelta.total_seconds(l.index[-1] - l.index[0]))\n",
-    "\n",
-    "print(\"Total length of corpus:\")\n",
-    "print(np.sum(lengths) / 3600, \"hours\")\n",
-    "print(\"Median performance length\")\n",
-    "print(np.median(lengths)/60, \"minutes\")\n",
-    "\n",
-    "df = pd.DataFrame({\"length\":lengths})\n",
-    "df.length = df.length/60.\n",
-    "df.describe()\n"
    ]
   },
   {
@@ -196,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -211,7 +105,27 @@
       "There were 548 performers in total.\n",
       "Total touches recorded was: 4298418\n",
       "Now saving a big file with all performances concatenated.\n",
-      "Done.\n"
+      "Done.\n",
+      "Data looks something like this:\n",
+      "                  x             y        moving            dt            dx  \\\n",
+      "count  4.298418e+06  4.298418e+06  4.298418e+06  4.298418e+06  4.298418e+06   \n",
+      "mean   4.976371e+02  5.115529e+02  9.120721e-01  4.144776e+01  6.109386e-02   \n",
+      "std    2.349282e+02  2.473850e+02  2.831901e-01  2.099729e+02  1.571173e+02   \n",
+      "min    0.000000e+00  0.000000e+00  0.000000e+00  5.100000e-02 -1.000000e+03   \n",
+      "25%    3.271484e+02  3.248698e+02  1.000000e+00  8.463000e+00 -9.277344e+00   \n",
+      "50%    4.892578e+02  5.019531e+02  1.000000e+00  1.616600e+01  0.000000e+00   \n",
+      "75%    6.611328e+02  6.829427e+02  1.000000e+00  2.026100e+01  8.789062e+00   \n",
+      "max    1.000000e+03  1.000000e+03  1.000000e+00  5.000000e+03  1.000000e+03   \n",
+      "\n",
+      "                 dy  \n",
+      "count  4.298418e+06  \n",
+      "mean   6.566415e-02  \n",
+      "std    1.331150e+02  \n",
+      "min   -1.326823e+03  \n",
+      "25%   -1.106771e+01  \n",
+      "50%    0.000000e+00  \n",
+      "75%    1.106771e+01  \n",
+      "max    1.326823e+03  \n"
      ]
     }
    ],
@@ -224,13 +138,17 @@
     "    output['time'] = output.index\n",
     "    output.velocity = output.velocity/output.velocity\n",
     "    output.velocity = output.velocity.fillna(0)\n",
-    "    output.x_pos = output.x_pos/1024.0\n",
-    "    output.y_pos = output.y_pos/768.0\n",
+    "    output.x_pos = output.x_pos * 1000.0/1024.0 # convert to [0,1000]\n",
+    "    output.y_pos = output.y_pos * 1000.0/768.0 # convert to [0,1000]\n",
     "    output.time = (output.time - first_time).apply(timedelta.total_seconds)\n",
-    "    output['dt'] = output.time.diff() # time diff.\n",
-    "    output.time = output.time.fillna(0)\n",
-    "    output.dt = output.dt.fillna(0)\n",
-    "    output = output.rename(columns={'x_pos': 'x', 'y_pos': 'y', 'velocity': 'moving', 'time': 'time', 'dt': 'dt'})\n",
+    "    output['dt'] = output.time.diff() * 1000.0 # time diff, convert to ms\n",
+    "    output.time = output.time.fillna(0) # give a decent value for gaps\n",
+    "    output.dt = output.dt.fillna(1000)\n",
+    "    output['dx'] = output.x_pos.diff()\n",
+    "    output.dx = output.dx.fillna(500)\n",
+    "    output['dy'] = output.y_pos.diff()\n",
+    "    output.dy = output.dy.fillna(500)\n",
+    "    output = output.rename(columns={'x_pos': 'x', 'y_pos': 'y', 'velocity': 'moving', 'time': 'time', 'dx': 'dx', 'dy': 'dy', 'dt': 'dt'})\n",
     "    return output\n",
     "\n",
     "total_touches = 0\n",
@@ -261,45 +179,50 @@
     "total_perf_df = pd.concat(individual_tiny_perfs)\n",
     "# total_perf_df.to_csv(\"metatone_corpus_tiny_perf_format.csv\" # not saving to CSV anymore.\n",
     "\n",
+    "xy_max = 1000 * 1.0\n",
+    "dt_max = 1000 * 5.0\n",
+    "\n",
     "# clip to x,y in [0,1]\n",
-    "total_perf_df.set_value(total_perf_df[total_perf_df.x > 1].index, 'x', 1.0)\n",
+    "total_perf_df.set_value(total_perf_df[total_perf_df.x > xy_max].index, 'x', xy_max)\n",
     "total_perf_df.set_value(total_perf_df[total_perf_df.x < 0].index, 'x', 0.0)\n",
-    "total_perf_df.set_value(total_perf_df[total_perf_df.y > 1].index, 'y', 1.0)\n",
+    "total_perf_df.set_value(total_perf_df[total_perf_df.y > xy_max].index, 'y', xy_max)\n",
     "total_perf_df.set_value(total_perf_df[total_perf_df.y < 0].index, 'y', 0.0)\n",
     "\n",
     "# could clip dt as well.\n",
-    "total_perf_df.set_value(total_perf_df[total_perf_df.dt > 5.0].index, 'dt', 5.0)\n",
+    "total_perf_df.set_value(total_perf_df[total_perf_df.dt > dt_max].index, 'dt', dt_max)\n",
     "\n",
     "# make into one huge array\n",
-    "total_perf_array = np.array(total_perf_df[['x','y','dt']])\n",
+    "total_perf_array = np.array(total_perf_df[['dx','dy','dt']])\n",
     "\n",
     "# save huge array in h5 format\n",
-    "data_file_name = \"MetatoneTinyPerformanceRecords.h5\"\n",
+    "data_file_name = \"MetatoneDifferentialTinyPerfCorpus-1000.h5\"\n",
     "with h5py.File(data_file_name, 'w') as data_file:\n",
     "    dset = data_file.create_dataset('total_performances', data=total_perf_array, dtype='float32')\n",
     "\n",
     "# done.\n",
-    "print(\"Done.\")"
+    "print(\"Done.\")\n",
+    "print(\"Data looks something like this:\")\n",
+    "print(total_perf_df.describe())"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
