--- a/tiny-perf-processing/performance-to-tiny-performance-dataframes.ipynb
+++ b/tiny-perf-processing/performance-to-tiny-performance-dataframes.ipynb
@@ -6,12 +6,18 @@
    "source": [
     "# Performance to Tiny Performance Format\n",
     "\n",
-    "The purpose of this script is to break down all the metatone touch-data into a long Tiny Touchscreen Performance array. Each performance is split per player, cleaned into `[x,y,moving,time,dt]` columns and then concatenated to produce a very long array. This is stored in `h5` format for later use in training ANNs."
+    "The purpose of this script is to break down all the metatone touch-data into a long Tiny Touchscreen Performance array. Each performance is split per player, cleaned into `[x,y,moving,time,dt]` columns and then concatenated to produce a very long array. This is stored in `h5` format for later use in training ANNs.\n",
+    "\n",
+    "TODO: \n",
+    "need to change to:\n",
+    "\n",
+    "    raw:      x,  y,  dt,  m\n",
+    "    diff: or: dx, dy, dt,  m\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,18 +43,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading all the frames.\n",
-      "Done Loading 163 logs.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "log_files = []\n",
     "log_frames = []\n",
@@ -59,103 +56,15 @@
     "\n",
     "print(\"Loading all the frames.\")\n",
     "for log in log_files:\n",
-    "    log_frames.append(pd.DataFrame.from_csv(log,parse_dates=True,header=0))\n",
+    "    log_frames.append(pd.read_csv(log, parse_dates=True, header=0, index_col=0))\n",
     "print(\"Done Loading\", len(log_frames), \"logs.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total length of corpus:\n",
-      "20.7342317189 hours\n",
-      "Median performance length\n",
-      "7.10905663333 minutes\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>length</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>163.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>7.632233</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>5.060826</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>0.000035</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>4.399071</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>7.109057</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>9.419563</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>26.003427</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           length\n",
-       "count  163.000000\n",
-       "mean     7.632233\n",
-       "std      5.060826\n",
-       "min      0.000035\n",
-       "25%      4.399071\n",
-       "50%      7.109057\n",
-       "75%      9.419563\n",
-       "max     26.003427"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "lengths = []\n",
     "\n",
@@ -171,6 +80,15 @@
     "df = pd.DataFrame({\"length\":lengths})\n",
     "df.length = df.length/60.\n",
     "df.describe()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# log_frames[0]"
    ]
   },
   {
@@ -196,25 +114,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dividing all performances by player and converting to tiny performance format.\n",
-      "\n",
-      "Processed 163 performances.\n",
-      "There were 548 performers in total.\n",
-      "Total touches recorded was: 4298418\n",
-      "Now saving a big file with all performances concatenated.\n",
-      "Done.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def clean_sound_object(frame):\n",
     "    \"\"\"Cleans up sound object frames by removing unneeded \n",
@@ -227,10 +131,24 @@
     "    output.x_pos = output.x_pos/1024.0\n",
     "    output.y_pos = output.y_pos/768.0\n",
     "    output.time = (output.time - first_time).apply(timedelta.total_seconds)\n",
-    "    output['dt'] = output.time.diff() # time diff.\n",
     "    output.time = output.time.fillna(0)\n",
+    "    #\n",
+    "    # clip to x,y in [0,1]\n",
+    "    output.x_pos = output.x_pos.clip(lower=0.0, upper=1.0)\n",
+    "    output.y_pos = output.y_pos.clip(lower=0.0, upper=1.0)\n",
+    "    \n",
+    "    #\n",
+    "    output['dt'] = output.time.diff() # time diff.\n",
     "    output.dt = output.dt.fillna(0)\n",
-    "    output = output.rename(columns={'x_pos': 'x', 'y_pos': 'y', 'velocity': 'moving', 'time': 'time', 'dt': 'dt'})\n",
+    "    output.dt = output.dt.clip(lower=0.0, upper=5.0)\n",
+    "    #\n",
+    "    output['dx'] = output.x_pos.diff()\n",
+    "    output.dx = output.dx.fillna(0)\n",
+    "    #\n",
+    "    output['dy'] = output.y_pos.diff()\n",
+    "    output.dy = output.dy.fillna(0)\n",
+    "    #\n",
+    "    output = output.rename(columns={'x_pos': 'x', 'y_pos': 'y', 'velocity': 'moving', 'time': 'time', 'dt': 'dt', 'dx': 'dx', 'dy': 'dy'})\n",
     "    return output\n",
     "\n",
     "total_touches = 0\n",
@@ -256,30 +174,98 @@
     "print()\n",
     "print(\"Processed\", total_performances, \"performances.\")\n",
     "print(\"There were\", total_performers, \"performers in total.\")\n",
-    "print(\"Total touches recorded was:\", total_touches)\n",
-    "print(\"Now saving a big file with all performances concatenated.\")\n",
-    "total_perf_df = pd.concat(individual_tiny_perfs)\n",
-    "# total_perf_df.to_csv(\"metatone_corpus_tiny_perf_format.csv\" # not saving to CSV anymore.\n",
+    "print(\"Total touches recorded was:\", total_touches)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "individual_tiny_perfs[0].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Save Performance Data in a compressed numpy file.\n",
+    "# Output format is:\n",
+    "# raw:      x,  y,  dt,  m\n",
+    "# diff: or: dx, dy, dt,  m\n",
     "\n",
-    "# clip to x,y in [0,1]\n",
-    "total_perf_df.set_value(total_perf_df[total_perf_df.x > 1].index, 'x', 1.0)\n",
-    "total_perf_df.set_value(total_perf_df[total_perf_df.x < 0].index, 'x', 0.0)\n",
-    "total_perf_df.set_value(total_perf_df[total_perf_df.y > 1].index, 'y', 1.0)\n",
-    "total_perf_df.set_value(total_perf_df[total_perf_df.y < 0].index, 'y', 0.0)\n",
+    "raw_perfs = []\n",
+    "diff_perfs = []\n",
+    "acc = 0\n",
     "\n",
-    "# could clip dt as well.\n",
-    "total_perf_df.set_value(total_perf_df[total_perf_df.dt > 5.0].index, 'dt', 5.0)\n",
+    "for l in individual_tiny_perfs:\n",
+    "    acc += l.shape[0] * l.shape[1]\n",
+    "    raw = np.array(l[['x', 'y', 'dt', 'moving']]).astype('float32') # x, y, dt, m\n",
+    "    diff = np.array(l[['dx', 'dy', 'dt', 'moving']]).astype('float32') # dx, dy, dt, m\n",
+    "    raw_perfs.append(raw)\n",
+    "    diff_perfs.append(diff)\n",
     "\n",
-    "# make into one huge array\n",
-    "total_perf_array = np.array(total_perf_df[['x','y','dt']])\n",
+    "print(\"total number of recs:\",acc)\n",
+    "print(\"total number of perfs in raw array:\", len(raw_perfs))\n",
+    "print(\"total number of perfs in diff array:\", len(diff_perfs))\n",
+    "raw_perfs = np.array(raw_perfs)\n",
+    "diff_perfs = np.array(raw_perfs)\n",
+    "np.savez_compressed('./metatone_dataset.npz', raw_perfs=raw_perfs, diff_perfs=diff_perfs)\n",
+    "print(\"done saving.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Test Loading from the saved datafile.\n",
+    "print(\"testing loading...\")\n",
+    "with np.load('./metatone_dataset.npz') as loaded:\n",
+    "    loaded_raw = loaded['raw_perfs']\n",
+    "    loaded_diff = loaded['diff_perfs']\n",
+    "    \n",
+    "print(\"Loaded perfs:\", len(loaded_raw), \"and\", len(loaded_diff))\n",
+    "print(loaded_raw[1][:5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Question: how many points are there in 5 seconds?\n",
     "\n",
-    "# save huge array in h5 format\n",
-    "data_file_name = \"MetatoneTinyPerformanceRecords.h5\"\n",
-    "with h5py.File(data_file_name, 'w') as data_file:\n",
-    "    dset = data_file.create_dataset('total_performances', data=total_perf_array, dtype='float32')\n",
+    "5.0 / np.array([r.T[2].mean() for r in loaded_raw]).mean()\n",
     "\n",
-    "# done.\n",
-    "print(\"Done.\")"
+    "# Answer: 69."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print(\"Now saving a big file with all performances concatenated.\")\n",
+    "# total_perf_df = pd.concat(individual_tiny_perfs)\n",
+    "# # total_perf_df.to_csv(\"metatone_corpus_tiny_perf_format.csv\" # not saving to CSV anymore.\n",
+    "\n",
+    "# # make into one huge array\n",
+    "# total_perf_array = np.array(total_perf_df[['x','y','dt']])\n",
+    "\n",
+    "# # save huge array in h5 format\n",
+    "# data_file_name = \"MetatoneTinyPerformanceRecords.h5\"\n",
+    "# with h5py.File(data_file_name, 'w') as data_file:\n",
+    "#     dset = data_file.create_dataset('total_performances', data=total_perf_array, dtype='float32')\n",
+    "\n",
+    "# # done.\n",
+    "# print(\"Done.\")"
    ]
   }
  ],
@@ -299,7 +285,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
